2008-08-14  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	* share/glade/dialog-spell-checking.glade:
	* share/glade/dialog-style-editor.glade:
	* src/actions/ViewManager.cc:
	Fix: Dialog parent.

2008-08-14  kitone  <kitone@gna.org>

	* src/PluginSystem.cc:
	* src/gui/Application.cc:
	Improve the speed accessibility of the menu at launch.

2008-08-13  kitone  <kitone@gna.org>

	* share/glade/dialog-check-errors-preferences.glade:
	* share/glade/dialog-configure-keyboard-shortcuts.glade:
	* share/glade/dialog-preferences.glade:
	* share/glade/dialog-style-editor.glade:
	* src/actions/VideoPlayerManagement.cc:
	* src/gui/CheckErrorsUI.cc:
	Batch of spelling fixes by Luboš Staněk.

2008-08-13  kitone  <kitone@gna.org>

	* src/DocumentSystem.cc:
	Fix: Untitled document translatable.

	* src/gui/DialogFileChooser.cc:
	Fix: Add translation string.

2008-08-13  kitone  <kitone@gna.org>

	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* prepare-po.sh:
	* share/Makefile.am:
	Add intltool. *.desktop file can be translated.
	Patch by Luboš Staněk.

	* share/subtitleeditor.desktop:
	Remove file.

	* share/subtitleeditor.desktop.in:
	New file.

2008-08-13  kitone  <kitone@gna.org>

	* acinclude.m4:
	Adds missing files from autoconf-archive for the AX_CHECK_GL macro.
	Patches by Luboš Staněk.

2008-08-12  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.22.2 release.

2008-08-11  kitone  <kitone@gna.org>

	* share/glade/dialog-find-and-replace.glade:
	* share/glade/dialog-preferences.glade:
	* src/gui/DialogFileChooser.cc:
	* src/gui/PreferencesUI.cc:
	Fix: Spelling errors, video/audio sink translation, new translation string.
	Patches by Luboš Staněk.

2008-08-10  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.22.1 release.

2008-08-10  kitone  <kitone@gna.org>

	* src/utility.cc:
	* src/utility.h:
	Add function set_transient_parent.

	* src/actions/ChangeFramerate.cc:
	* src/actions/DocumentManagement.cc: