@@ -24,6 +24,7 @@
 #include "debug.h"
 #include <string>
 #include <iostream>
+#include <glibmm/timer.h>
 
 /*
  *
@@ -31,11 +32,26 @@
 static int debug_flags = SE_NO_DEBUG;
 
 /*
+ * PROFILING
+ */
+//#define ENABLE_PROFILING
+
+#ifdef ENABLE_PROFILING
+static Glib::Timer timer;
+static double timer_last = 0.0;
+#endif//ENABLE_PROFILING
+
+/*
  *
  */
 void se_debug_init(int flags)
 {
 	debug_flags = flags;
+
+#ifdef ENABLE_PROFILING
+	if(debug_flags != SE_NO_DEBUG)
+		timer.start();
+#endif//ENABLE_PROFILING
 }
 
 /*
@@ -60,7 +76,17 @@ void __se_debug(
 {
 	if(G_UNLIKELY(debug_flags & flag) || G_UNLIKELY(debug_flags & SE_DEBUG_ALL))
 	{
+#ifdef ENABLE_PROFILING
+		double seconds = 0.0;
+
+		seconds = timer.elapsed();
+
+		g_print("[%f (%f)] %s:%d (%s)\n", seconds, seconds - timer_last, file, line, fonction);
+		timer_last = seconds;
+#else
 		g_print("%s:%d (%s)\n", file, line, fonction);
+#endif//ENABLE_PROFILING
+
 		fflush(stdout);
 	}
 }
@@ -86,7 +112,17 @@ void __se_debug_message(
 		msg = g_strdup_vprintf(format, args);
 		va_end(args);
 
+#ifdef ENABLE_PROFILING
+		double seconds = 0.0;
+
+		seconds = timer.elapsed();
+
+		g_print("[%f (%f)] %s:%d (%s) %s\n", seconds, seconds - timer_last, file, line, fonction, msg);
+		timer_last = seconds;
+#else
 		g_print("%s:%d (%s) %s\n", file, line, fonction, msg);
+#endif//ENABLE_PROFILING
+
 		fflush(stdout);
 
 		g_free(msg);
