@@ -1,5 +1,10 @@
 2008-08-14  kitone  <kitone@gna.org>
 
+	* src/debug.cc:
+	Add profiling to debug functions (disable by default).
+
+2008-08-14  kitone  <kitone@gna.org>
+
 	* share/glade/dialog-preferences.glade:
 	* share/glade/dialog-spell-checking.glade:
 	* share/glade/dialog-style-editor.glade:
